media-internals: Remove audio/video codec reporting from mp4 parser

These parsers generated too many logs, most of which don't provide much
value. When I watch youtube games channel, I can see new audio/video
codec logs in media-internals every second.

From the bug, it seems it'll take some more time before we have a proper
fix. I think we should remove these logs for now, and then if needed, we
can reenable them with the proper fix.

BUG=653773

Review-Url: https://codereview.chromium.org/2702803002
Cr-Commit-Position: refs/heads/master@{#451421}

Former-commit-id: 9c17e198a8ad64e0ca922329e701466f08161e6a